test/Fail/FunSort-X-Prop-SetOmega.err
FunSort-X-Prop-SetOmega.agda:6.13-18: error: [UnequalTypes]
The types
  Setω
and
  funSort _3 Prop
are not equal
when checking that the expression A → B has type Setω
